# gemini3d

./: .appveyor.yml  .codespellrc  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CITATION.cff  CMakeLists.meson  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  GEMINI.vfproj  LICENSE  LICENSE.txt  Makefile  Makefile.gg  Makefile.make  Makefile.mz  Makefile_guy.mk  README.md  README_libs.md  Readme.md  TODO.md  appveyor.yml  azure-pipelines.yaml  azure-pipelines.yml  build.py  build_Intel.sh  build_MZlaptop.sh  build_budge.sh  build_budge_h5.sh  build_centos_gcc.sh  build_centos_intel.sh  build_cygwin.sh  (+56 more)
archive/: Efield_BCs_2Dtest.m  FindParMETIS.cmake  Makefile_guy.mk  Makefile_mz.mk  README_libs.md  azure-pipelines.yml  build.sh  build_MZlaptop.sh  build_cygwin.sh  build_gcc.sh  build_gcc7.sh  build_guy_gcc_centos.sh  build_intel18.sh  build_intel19.sh  build_laptop.sh  build_local.sh  build_local_real32.sh  build_mkl.sh  build_windows.bat  build_windows_cmake.bat  calculus.f90  ci_linux_meson.yml  ci_macos_meson.yml  cmake.sh  download.cmake  makegrid_cart_3D_lowresx1.m  maxfactor.cmake  meson.build  meson.sh  meson_matlab_has_batch.py  meson_old.build  mpihalo.f90  mpirecv.f90  mpisend.f90  pdelliptic.f90  potentialBCs_mumps.f90  potential_comm_ilupack.f90  precipBCs_mod.f90  simaxes.m  test_compare.cmake  (+3 more)
archive/meson/: meson.build
archive/numerical/: meson.build
archive/subprojects/: cglow.wrap  lapack.wrap
cmake/: CheckTLS.cmake  DllTestPath.cmake  FindLAPACK.cmake  FindMUMPS.cmake  FindSCALAPACK.cmake  GitSubmodule.cmake  PatchFile.cmake  README.md  SetTargProps.cmake  build_cmake.cmake  build_ninja.cmake  compare.cmake  compiler_find.cmake  compiler_flags.cmake  compiler_gnu.cmake  compiler_intel.cmake  compiler_intel_win.cmake  compilers.cmake  cpu_count.cmake  cray.cmake  download.cmake  find_generator.cmake  gemini3d_url.json  gemini3d_url.txt  gemini_libraries.cmake  gemini_libraries.json  gemini_prereq.cmake  git.cmake  git_rev.cmake  glow.cmake  gnu.cmake  h5fortran.cmake  hdf5.cmake  hwm14.cmake  install_cmake.cmake  install_hwloc.cmake  install_ninja.cmake  intel.cmake  lapack.cmake  lapack_external.cmake  (+34 more)
cmake/Modules/: FindBLACS.cmake  FindHDF5.cmake  FindHWLOC.cmake  FindLAPACK.cmake  FindLAPACK95.cmake  FindMETIS.cmake  FindMKL.cmake  FindMPI.cmake  FindMUMPS.cmake  FindNetCDF.cmake  FindOctave.cmake  FindPATCH.cmake  FindSCALAPACK.cmake  FindScotch.cmake  JsonParse.cmake
cmake/abi_check/: CMakeLists.txt  addtwo.cpp  main.cpp  main.f90
cmake/compilers/: compilers.cmake  find.cmake  flags.cmake  gnu.cmake  intel.cmake
cmake/config/: libraries.cmake  libraries.json  libraries.txt  macos.cmake  options.cmake  policy.cmake  summary.cmake
cmake/ext_libs/: build_hdf5.cmake  build_zlib.cmake  ffilesystem.cmake  filesystem.cmake  glow.cmake  h5fortran-hdf5.cmake  h5fortran.cmake  hdf5.cmake  hwm14.cmake  iniparser.cmake  lapack.cmake  matlab.cmake  mpi.cmake  msis2.cmake  mumps.cmake  nc4fortran-ncdf.cmake  nc4fortran.cmake  pathlib.cmake  python.cmake  (+2 more)
io/: CMakeLists.txt  aurora.f90  aurora_hdf5.f90  aurora_ncdf.f90  aurora_raw.f90  expanduser.f90  formats.f90  input.F90  input.f90  io.F90  io.f90  io_dummy.f90  io_posix.f90  io_windows.f90  logging.f90  mag.f90  mag_hdf5.f90  mag_ncdf.f90  mag_raw.f90  meson.build  mkdir.F90  output.f90  path_exists.f90  path_exists_intel.f90  pathlib.F90  plasma.f90  plasma_input_hdf5.f90  plasma_input_raw.f90  plasma_output_hdf5.f90  plasma_output_ncdf.f90  plasma_output_raw.f90  reader.f90  reader_hdf5.f90  reader_raw.f90  test_formats.f90
ionization/: CMakeLists.txt  README.md  fang.f90  fang_run.f90  glow_dummy.f90  glow_run.F90  glow_run.f90  ionization.f90  meson.build  test_fang.f90  test_fang.py  test_fang2008.f90  test_fang2008.py
meson/: meson.build
neutral/: CMakeLists.txt  atmos.f90  meson.build  neutral.f90
numerical/: CMakeLists.txt  meson.build  test_diffusion.cmake
scripts/: CMakeLists.txt  CheckTLS.cmake  build_cmake.cmake  build_hdf5.cmake  build_mpich.cmake  build_ninja.cmake  build_openmpi.cmake  build_zstd.cmake  check_subprojects.py  ci.cmake  compare_all.py  compile_prereqs_gcc.py  compile_prereqs_ibmxl.py  compile_prereqs_intel.py  dat2hdf.py  debug_cmake_versions.cmake  gemini_compare.py  gemini_prereq.cmake  generate_reference_data.py  get_cpu_count.py  grid2hdf.py  install_cmake.cmake  install_hwloc.cmake  install_ninja.cmake  install_prereq.cmake  install_prereqs.py  meson_get_environment_variable.py  meson_run_test.py  model_setup.py  offline_libraries.cmake  offline_toolchain.cmake  plot_Efield.py  plot_volume.py  plotall.py  print_simsize.py  requirements.cmake  run_test.py  test_rebuild.cmake  versions.json  vid_encode2.sh  (+1 more)
sources/: CMakeLists.txt  meson.build  sources.f90
src/: CMakeLists.txt  MHD1D_SAW.f90  MHD1D_shock.f90  PDEparabolic.f90  advec.f90  advec_mpi.f90  atmos.f90  aurora_hdf5.f90  aurora_ncdf.f90  collisions.f90  diffusion.F90  elliptic2d.f90  fang.f90  gbsv.f90  gemini.f90  gemini3d.h  gemini_cli.f90  gemini_cli.in.f90  gemini_compare.f90  gemini_init.f90  gemini_main.c  gemini_main.cpp  gemini_main.f90  glow_dummy.f90  gradient.f90  input.f90  integral.f90  interp2d.f90  libforestgemini.f90  libforestgemini_c.f90  libgem_mpi_drifts.f90  libgem_mpi_io.f90  libgem_mpi_par.f90  libgem_utils.f90  libgemini.cpp  libgemini.cpp.orig  libgemini.f90  libgemini_C.f90  libgemini_c.f90  libgemini_common.f90  (+31 more)
temporal/: CMakeLists.txt  PlotSZA.py  meson.build  temporal.f90  test_dayrollover.f90  test_formats.f90  timeutils.f90
test/: CMakeLists.txt  config.cmake  download.cmake  echo_path.f90  mpi_launcher.cmake  sim.cmake  test_hdf5.c  test_hdf5.f90  test_mpi.f90  test_mumps.f90  test_scalapack.f90  test_urls.json  url_name.cmake
tests/: CMakeLists.txt  assert_allclose.m  compare_all.m  compare_all.py  meson.build  test2deq_config.nml  test3deq_config.nml  test_config.py  test_dayrollover.f90  test_formats.f90  test_mpi.f90  test_mumps.F90  test_mumps.f90
(+1679 files in other folders)
