option('realbits', type : 'combo', choices : ['64', '32'], description : 'real bits')
option('arith', type: 'string', value: 'sd', description: 'precision (s,d,c,z)')
option('matlab', type : 'feature', value: 'disabled', description : 'Matlab >= R2019a required')
option('hdf5', type: 'feature', value: 'enabled', description: 'HDF5 file I/O')
option('netcdf', type: 'feature', value: 'disabled', description: 'NetCDF file I/O')
option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
option('mklroot', type : 'string', description : 'MKL root directory')
option('np', type : 'integer', value: 0, description : 'manually set number of MPI images')