[metadata]
name = gemini
version = 0.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = 3-D ionospheric model plotting suite
url = https://github.com/gemini3d/gemini
keywords =
  mesosphere
  stratosphere
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
zip_safe = False
packages = find:
scripts =
  tests/compare_all.py
install_requires =
  numpy
  xarray


[options.extras_require]
tests =
  pytest >= 3.9
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plots =
  matplotlib

[options.entry_points]
console_scripts =
