[metadata]
name = gemini3d
version = 0.6.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = 3-D ionospheric model plotting suite
url = https://github.com/gemini3d/gemini
keywords =
  mesosphere
  stratosphere
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages=find:
python_requires = >= 3.6
zip_safe = False
install_requires =
  numpy >= 1.16.0
  scipy
  h5py
package_dir=
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  gemini_compare = gemini3d.__main__:compare_run
  gemini_plot = gemini3d.vis:gemini_plot
  gemini_run = gemini3d.__main__:gemini_run
  gemini_setup = gemini3d.__main__:gemini_setup
  gemini_prereqs = gemini3d.compile_prereqs:main

[options.extras_require]
tests =
  pytest >= 3.9
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plots =
  mayavi
  matplotlib >= 3.1

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/,subprojects/
per-file-ignores =
    __init__.py:F401
ignore =
  W503
  E203

[mypy]
ignore_missing_imports = True
strict_optional = False
allow_redefinition = True
show_error_context = False
show_column_numbers = True

[tool:pytest]
rootdir = src/gemini3d
minversion = 3.9
addopts = -ra -v
norecursedirs = subprojects _deps archive .* build dist _darcs {arch} *.egg venv

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  raise AssertionError
  raise NotImplementedError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
